# RustBalance

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  README.md  clippy.toml  config.example.toml  deny.toml  rustfmt.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  quick-check.yml  release.yml
Documentation/: FlowChart.md  Index.md  Phase_1_Survival_Basics.md  Phase_2_Monitoring_Resilience.md  Phase_3_Hardened_Posture.md  Phase_4_Advanced_Hardening.md
docs/: ARCHITECTURE.md  CHALLENGES.md  CONFIG.md  CRATES.md  CRYPTO_VALIDATION.md  DESIGN_NOTES.md  HARDENING.md  HSPOST_NEXT_STEPS.md  PROTOCOL.md  ROADMAP.md  SECURITY.md  SELF_HEALING.md  TAKEOVER.md  TODO.md
rustbalance_node_hs/: ob_config
scripts/: gen_master_key.py  monitor_events.py  monitor_hsdesc.py  pre-commit
scripts/debug/: analyze_cert.py  analyze_rb_cert.py  check_blinded_key.py  check_descriptor.py  check_kprime.py  check_period.py  check_tor_blinded.py  compute_blinded.py  compute_vm2_blinded.py  create_test_descriptor.py  debug_blinding.py  debug_clamp.py  debug_scalar.py  debug_stem.py  debug_stem_direct.py  full_mac_verify.py  get_blinded.py  get_descriptor.py  listen_hs_desc.py  parse_cert.py  test_stem.py  test_stem_decrypt.py  test_stem_fetch.py  test_vm.sh  verify_blinded_key.py  verify_blinding.py  verify_mac.py  verify_parsing.py  verify_signature.py  vm1_config.toml
src/: lib.rs  logging.rs  main.rs
src/balance/: backend.rs  bootstrap.rs  fetch.rs  health.rs  http_proxy.rs  join_handler.rs  merge.rs  mod.rs  onion_service.rs  publish.rs
src/cli/: backend.rs  debug.rs  init.rs  join.rs  mod.rs  status.rs  token.rs
src/config/: file.rs  mod.rs  validation.rs
src/coord/: election.rs  lease.rs  messages.rs  mod.rs  peers.rs  wg.rs  wireguard.rs
src/crypto/: blinding.rs  descriptor.rs  keys.rs  mod.rs
src/repair/: actions.rs  mod.rs  restart.rs
src/scheduler/: loops.rs  mod.rs
src/state/: mod.rs  model.rs
src/tor/: consensus.rs  control.rs  descriptors.rs  hsdir.rs  mod.rs
src/util/: mod.rs  rand.rs  time.rs
testing/: TESTING_ENV.md  brute_force_blinding.py  deploy.sh  extract_blinded_key.py  get_blinded_key.py  load_balance_test.ps1  ob_config.README.txt  post_deployment_report.ps1  session.env.example  stem_blinding.py  test_cluster.sh  verify_blinding.py  verify_deployment.ps1  vm1_config.toml  vm2_config.toml
tests/: control_port.rs  descriptor.rs  election.rs
